FIX: adding spacing under about

--- a/index.css
+++ b/index.css
@@ -497,8 +497,8 @@ footer {
 
 .about_section {
   margin-top: 30px;
+  padding-bottom: 50px;
   width: 100%;
-  padding: 0px;
   font-family: monospace;
 }
 
@@ -552,7 +552,6 @@ footer {
   text-align: justify;
   word-break: break-all;
   word-spacing: -5px;
-  padding-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -760,6 +759,10 @@ footer {
 
   .font {
     font-size: 19px;
+  }
+
+  .bio_photo {
+    width: 90%;
   }
 
   .about_section p {
